lab5/out
make[1]: Entering directory '/home/elijah/etc/programs/CMPS104a/cmps104a/lab5'
g++ -std=gnu++17 -g -O0 -Wall -Wextra -Wpedantic -Wshadow -Wold-style-cast -fdiagnostics-color=never -c 3ac.cpp
3ac.cpp: In constructor ‘reg::reg(std::string*)’:
3ac.cpp:66:23: error: expected ‘;’ before ‘ident’
   66 |   typesize = typesize_
      |                       ^
      |                       ;
   67 |   ident = nullptr;
      |   ~~~~~                
3ac.cpp: In function ‘ac3* p_call(astree*, symbol_table*, std::string*)’:
3ac.cpp:522:68: error: call of overloaded ‘reg(std::string*)’ is ambiguous
  522 |     reg *fname = new reg(new string (*(expr->children[0]->lexinfo)));
      |                                                                    ^
3ac.cpp:65:1: note: candidate: ‘reg::reg(std::string*)’
   65 | reg::reg(string *typesize_){
      | ^~~
3ac.cpp:55:1: note: candidate: ‘reg::reg(std::string*, std::vector<reg*>*)’
   55 | reg::reg(string *fname_, vector<reg*> *parameters_){
      | ^~~
3ac.cpp:35:1: note: candidate: ‘reg::reg(const string*)’
   35 | reg::reg(const string *ident_){
      | ^~~
In file included from 3ac.cpp:1:
3ac.h:28:8: note: candidate: ‘constexpr reg::reg(const reg&)’
   28 | struct reg {
      |        ^~~
make[1]: *** [Makefile:55: 3ac.o] Error 1
make[1]: Leaving directory '/home/elijah/etc/programs/CMPS104a/cmps104a/lab5'
